# example-dbt-airflow

./: .flake8  .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml  tasks.py
airflow/dags/: dag.py
cdk/: app.py  requirements.txt
cdk/cdk/: cdk_stack.py
cdk/tests/unit/: test_cdk_stack.py
containers/docker/: Dockerfile  docker-compose.airflow.yml
docs/: index.md
docs/diagrams/: architecture.drawio
tests/: conftest.py  test_airflow_local.py  test_placeholder.py
