[tool.poetry]
name = "example-dbt-airflow"
version = "0.1.0"
description = "Example project learning dbt on MWAA and provisioning via cdk"
authors = ["Josh Peak <neozenith.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
mypy = "^1.7.1"
pytest = "^7.4.3"
coverage = {extras = ["toml"], version = "^7.3.2"}
pytest-xdist = "^3.5.0"
pytest-randomly = "^3.15.0"
md-toc = "^8.2.2"
isort = "^5.12.0"
invoke = "^2.2.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.14"
mkdocstrings = "^0.24.0"
mkdocstrings-python = "^1.7.5"
tomlkit = "^0.12.3"
testcontainers = "^3.7.1"
aiohttp = "^3.9.1"
pytest-asyncio = "^0.23.2"


[tool.poetry.group.infra.dependencies]
boto3 = "^1.33.8"
aws-cdk-lib = "^2.114.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",# pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
    "PTH", # falek8-use-pathlib 
    "TCH", # flake8-type-checking
    "S", # flake8-bandit
    "C90", #mccabe
]
ignore = [
  "S101", # Warns against the use of assert not helpful when using pytest 
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 10

[tool.isort]
profile = "black"
multi_line_output = 3
import_heading_stdlib = "Standard Library"
import_heading_firstparty = "Our Libraries"
import_heading_thirdparty = "Third Party"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-s --color=yes --strict-markers --ignore=cdk"
asyncio_mode = "auto"
markers = ["docker", "asyncio"]

[tool.coverage.run]
omit = ["tests/*", "cdk/*", "**/__init__.py", "tasks.py"]
branch = true

[tool.mypy]
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
exclude = [
  'tests/',
  'cdk/'
]
follow_imports = 'silent'
ignore_missing_imports = true

# Work your way up to these:
disallow_incomplete_defs = true
# disallow_untyped_defs = true 
# disallow_untyped_calls = true
# strict = true